# entry_point_isinstance

./: README.rst  entry_point_isinstance.py  pyproject.toml
